# docflow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.airflow  Dockerfile.knowledge-db  Dockerfile.mcp  Dockerfile.ollama  LICENSE  README.md  docker-compose.yml  knowledge-db-init.sql  pyproject.toml
.devcontainer/: Dockerfile.airflow  Dockerfile.ollama  airflow-init.sh  devcontainer.json  docker-compose.local.example.yml  docker-compose.yml
dags/: common.py  ingest_azure_devops_wikis.py  ingest_confluence_pages.py  ingest_confluence_spaces.py  ingest_pdf_files.py
src/docflow/: __init__.py  config.py  documents.py  pdf.py  search.py  text.py
src/docflow/azure_devops/: __init__.py  auth.py  extraction.py  ingestion.py
src/docflow/confluence/: __init__.py  auth.py  extraction.py  ingestion.py
src/docflow/db/: __init__.py  models.py  setup.py  types.py
src/docflow/documents/: __init__.py  chunks.py  embeddings.py  extraction.py
src/docflow/ingestion/: pdf.py
src/docflow/mcp/: __init__.py  server.py
src/docflow/pdf/: __init__.py  extraction.py  ingestion.py
src/docflow/text/: __init__.py
tests/: conftest.py  test_config.py  test_documents.py  test_search.py  test_text.py
tests/azure_devops/: test_extraction.py
tests/confluence/: test_extraction.py
